Bug 426120 - wrong OSD indication when switching keyboard layout with Policy other than Global
Summary: wrong OSD indication when switching keyboard layout with Policy other than Gl...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: input (other bugs)
Version First Reported In: git master
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Andrey
URL: https://invent.kde.org/plasma/kwin/-/...
Keywords:
Depends on:
Blocks: 418699
  Show dependency treegraph
 
Reported: 2020-09-02 20:26 UTC by Andrey
Modified: 2020-09-29 14:20 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
butirsky: Wayland+
butirsky: X11-


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey 2020-09-02 20:26:10 UTC
SUMMARY
Described the case with Application switching Policy.

STEPS TO REPRODUCE
1. Set Application Policy for keyboard layout switching in Keyboard Settings. Make sure there are at least 2 layouts.
2. Switch layout in one app, note OSD notification pop up on the switching.
3. Focus another app with mouse.
4. Start switching to the first app from there, now using Alt+Tab key combination. While pressing Alt+Tab, hold Alt for a little until Task Switcher appears, then shortly release Alt. 

OBSERVED RESULT
After the app switches, OSD notification indicates wrong layout (of the previous app).

EXPECTED RESULT
OSD should correspond to the actual app just switched.

SOFTWARE/OS VERSIONS
Operating System: Ubuntu 20.04
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.74.0
Qt Version: 5.14.2
Comment 1 David Edmundson 2020-09-29 14:20:44 UTC
Git commit 2bbab06fc4e8277095049d04809a6f7d43d3d29c by David Edmundson, on behalf of Andrey Butirsky.
Committed on 29/09/2020 at 14:20.
Pushed by davidedmundson into branch 'master'.

fix: wrong keyboard layout OSD notification

DIGEST:

M  +3    -2    keyboard_input.cpp

https://invent.kde.org/plasma/kwin/commit/2bbab06fc4e8277095049d04809a6f7d43d3d29c