fix: wrong keyboard layout OSD notification

DIGEST:
BUG: 426120